flawed, need to implement some sort of rolling prediction statistics. This is predicting the game based on the game

--- a/final-project/02_data_preprocessing.ipynb
+++ b/final-project/02_data_preprocessing.ipynb
@@ -98,6 +98,87 @@
    "source": [
     "This shows the number of missing data per feature."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4966db4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After cleaning: 26552 games\n",
+      "Dropped: 99 games\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_data = clean_data.dropna(subset=columns_to_keep)\n",
+    "print(f\"After cleaning: {len(clean_data)} games\")\n",
+    "print(f\"Dropped: {len(games) - len(clean_data)} games\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a603445d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✓ Data sorted chronologically\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 'GAME_DATE_EST' in clean_data.columns:\n",
+    "    clean_data = clean_data.sort_values('GAME_DATE_EST').reset_index(drop=True)\n",
+    "    print(\"\\n✓ Data sorted chronologically\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "04506bf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "✓ PREPROCESSING COMPLETE\n",
+      "============================================================\n",
+      "Saved to: data/processed/games_basic.csv\n",
+      "Final shape: (26552, 15)\n",
+      "Features: 15\n",
+      "Samples: 26552\n",
+      "============================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.makedirs('data/processed', exist_ok=True)\n",
+    "\n",
+    "output_file = 'data/processed/games_basic.csv'\n",
+    "clean_data.to_csv(output_file, index=False)\n",
+    "\n",
+    "print(f\"\\n{'='*60}\")\n",
+    "print(f\"✓ PREPROCESSING COMPLETE\")\n",
+    "print(f\"{'='*60}\")\n",
+    "print(f\"Saved to: {output_file}\")\n",
+    "print(f\"Final shape: {clean_data.shape}\")\n",
+    "print(f\"Features: {len(columns_to_keep)}\")\n",
+    "print(f\"Samples: {len(clean_data)}\")\n",
+    "print(f\"{'='*60}\")"
+   ]
   }
  ],
  "metadata": {
