final project last touches

--- a/final-project/01_data_exploration.ipynb
+++ b/final-project/01_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "510a28ea",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Setup complete!\n"
+      "Setup complete!\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "957b37e3",
    "metadata": {},
    "outputs": [
@@ -47,11 +47,11 @@
      "text": [
       "Files in data/raw:\n",
       "==================================================\n",
-      "  📄 teams.csv                      (0.00 MB)\n",
-      "  📄 players.csv                    (0.25 MB)\n",
-      "  📄 games.csv                      (3.92 MB)\n",
-      "  📄 ranking.csv                    (14.73 MB)\n",
-      "  📄 games_details.csv              (88.77 MB)\n"
+      "teams.csv                      (0.00 MB)\n",
+      "players.csv                    (0.25 MB)\n",
+      "games.csv                      (3.92 MB)\n",
+      "ranking.csv                    (14.73 MB)\n",
+      "games_details.csv              (88.77 MB)\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "91d3d001",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Data loaded successfully!\n",
       "\n",
       "Dataset Shape: 26,651 rows × 21 columns\n"
      ]
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "14fcfa48",
    "metadata": {},
    "outputs": [
@@ -135,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "d6bd604f",
    "metadata": {},
    "outputs": [
@@ -347,7 +346,7 @@
        "4         0.292      20.0      47.0               0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8c4812c6",
    "metadata": {},
    "outputs": [
@@ -370,288 +369,41 @@
      "text": [
       "\n",
       "BASIC STATISTICS:\n",
-      "============================================================\n"
+      "============================================================\n",
+      "        FG_PCT_home   FG_PCT_away      PTS_home      PTS_away      REB_home  \\\n",
+      "count  26552.000000  26552.000000  26552.000000  26552.000000  26552.000000   \n",
+      "mean       0.460735      0.449732    103.455898    100.639876     43.374284   \n",
+      "std        0.056676      0.055551     13.283370     13.435868      6.625769   \n",
+      "min        0.250000      0.244000     36.000000     33.000000     15.000000   \n",
+      "25%        0.422000      0.412000     94.000000     91.000000     39.000000   \n",
+      "50%        0.460000      0.449000    103.000000    100.000000     43.000000   \n",
+      "75%        0.500000      0.487000    112.000000    110.000000     48.000000   \n",
+      "max        0.684000      0.687000    168.000000    168.000000     72.000000   \n",
+      "\n",
+      "           REB_away      AST_home      AST_away  \n",
+      "count  26552.000000  26552.000000  26552.000000  \n",
+      "mean      42.113249     22.823441     21.496271  \n",
+      "std        6.533039      5.193308      5.160596  \n",
+      "min       19.000000      6.000000      4.000000  \n",
+      "25%       38.000000     19.000000     18.000000  \n",
+      "50%       42.000000     23.000000     21.000000  \n",
+      "75%       46.000000     26.000000     25.000000  \n",
+      "max       81.000000     50.000000     46.000000  \n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GAME_ID</th>\n",
-       "      <th>HOME_TEAM_ID</th>\n",
-       "      <th>VISITOR_TEAM_ID</th>\n",
-       "      <th>SEASON</th>\n",
-       "      <th>TEAM_ID_home</th>\n",
-       "      <th>PTS_home</th>\n",
-       "      <th>FG_PCT_home</th>\n",
-       "      <th>FT_PCT_home</th>\n",
-       "      <th>FG3_PCT_home</th>\n",
-       "      <th>AST_home</th>\n",
-       "      <th>REB_home</th>\n",
-       "      <th>TEAM_ID_away</th>\n",
-       "      <th>PTS_away</th>\n",
-       "      <th>FG_PCT_away</th>\n",
-       "      <th>FT_PCT_away</th>\n",
-       "      <th>FG3_PCT_away</th>\n",
-       "      <th>AST_away</th>\n",
-       "      <th>REB_away</th>\n",
-       "      <th>HOME_TEAM_WINS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>2.665100e+04</td>\n",
-       "      <td>2.665100e+04</td>\n",
-       "      <td>2.665100e+04</td>\n",
-       "      <td>26651.000000</td>\n",
-       "      <td>2.665100e+04</td>\n",
-       "      <td>26552.000000</td>\n",
-       "      <td>26552.000000</td>\n",
-       "      <td>26552.000000</td>\n",
-       "      <td>26552.000000</td>\n",
-       "      <td>26552.000000</td>\n",
-       "      <td>26552.000000</td>\n",
-       "      <td>2.665100e+04</td>\n",
-       "      <td>26552.000000</td>\n",
-       "      <td>26552.000000</td>\n",
-       "      <td>26552.000000</td>\n",
-       "      <td>26552.000000</td>\n",
-       "      <td>26552.000000</td>\n",
-       "      <td>26552.000000</td>\n",
-       "      <td>26651.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>2.175487e+07</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>2012.113879</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>103.455898</td>\n",
-       "      <td>0.460735</td>\n",
-       "      <td>0.760377</td>\n",
-       "      <td>0.356023</td>\n",
-       "      <td>22.823441</td>\n",
-       "      <td>43.374284</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>100.639876</td>\n",
-       "      <td>0.449732</td>\n",
-       "      <td>0.758816</td>\n",
-       "      <td>0.349489</td>\n",
-       "      <td>21.496271</td>\n",
-       "      <td>42.113249</td>\n",
-       "      <td>0.587032</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>5.570189e+06</td>\n",
-       "      <td>8.638670e+00</td>\n",
-       "      <td>8.659299e+00</td>\n",
-       "      <td>5.587031</td>\n",
-       "      <td>8.638670e+00</td>\n",
-       "      <td>13.283370</td>\n",
-       "      <td>0.056676</td>\n",
-       "      <td>0.100677</td>\n",
-       "      <td>0.111164</td>\n",
-       "      <td>5.193308</td>\n",
-       "      <td>6.625769</td>\n",
-       "      <td>8.659299e+00</td>\n",
-       "      <td>13.435868</td>\n",
-       "      <td>0.055551</td>\n",
-       "      <td>0.103429</td>\n",
-       "      <td>0.109441</td>\n",
-       "      <td>5.160596</td>\n",
-       "      <td>6.533039</td>\n",
-       "      <td>0.492376</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.030000e+07</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>2003.000000</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>36.000000</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>0.143000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>15.000000</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>33.000000</td>\n",
-       "      <td>0.244000</td>\n",
-       "      <td>0.143000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>19.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>2.070001e+07</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>2007.000000</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>94.000000</td>\n",
-       "      <td>0.422000</td>\n",
-       "      <td>0.697000</td>\n",
-       "      <td>0.286000</td>\n",
-       "      <td>19.000000</td>\n",
-       "      <td>39.000000</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>91.000000</td>\n",
-       "      <td>0.412000</td>\n",
-       "      <td>0.692000</td>\n",
-       "      <td>0.278000</td>\n",
-       "      <td>18.000000</td>\n",
-       "      <td>38.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>2.120076e+07</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>2012.000000</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>103.000000</td>\n",
-       "      <td>0.460000</td>\n",
-       "      <td>0.765000</td>\n",
-       "      <td>0.357000</td>\n",
-       "      <td>23.000000</td>\n",
-       "      <td>43.000000</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>0.449000</td>\n",
-       "      <td>0.765000</td>\n",
-       "      <td>0.350000</td>\n",
-       "      <td>21.000000</td>\n",
-       "      <td>42.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>2.180005e+07</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>2017.000000</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>112.000000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.833000</td>\n",
-       "      <td>0.429000</td>\n",
-       "      <td>26.000000</td>\n",
-       "      <td>48.000000</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>110.000000</td>\n",
-       "      <td>0.487000</td>\n",
-       "      <td>0.833000</td>\n",
-       "      <td>0.419000</td>\n",
-       "      <td>25.000000</td>\n",
-       "      <td>46.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>5.210021e+07</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>2022.000000</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>168.000000</td>\n",
-       "      <td>0.684000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>72.000000</td>\n",
-       "      <td>1.610613e+09</td>\n",
-       "      <td>168.000000</td>\n",
-       "      <td>0.687000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>46.000000</td>\n",
-       "      <td>81.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            GAME_ID  HOME_TEAM_ID  VISITOR_TEAM_ID        SEASON  \\\n",
-       "count  2.665100e+04  2.665100e+04     2.665100e+04  26651.000000   \n",
-       "mean   2.175487e+07  1.610613e+09     1.610613e+09   2012.113879   \n",
-       "std    5.570189e+06  8.638670e+00     8.659299e+00      5.587031   \n",
-       "min    1.030000e+07  1.610613e+09     1.610613e+09   2003.000000   \n",
-       "25%    2.070001e+07  1.610613e+09     1.610613e+09   2007.000000   \n",
-       "50%    2.120076e+07  1.610613e+09     1.610613e+09   2012.000000   \n",
-       "75%    2.180005e+07  1.610613e+09     1.610613e+09   2017.000000   \n",
-       "max    5.210021e+07  1.610613e+09     1.610613e+09   2022.000000   \n",
-       "\n",
-       "       TEAM_ID_home      PTS_home   FG_PCT_home   FT_PCT_home  FG3_PCT_home  \\\n",
-       "count  2.665100e+04  26552.000000  26552.000000  26552.000000  26552.000000   \n",
-       "mean   1.610613e+09    103.455898      0.460735      0.760377      0.356023   \n",
-       "std    8.638670e+00     13.283370      0.056676      0.100677      0.111164   \n",
-       "min    1.610613e+09     36.000000      0.250000      0.143000      0.000000   \n",
-       "25%    1.610613e+09     94.000000      0.422000      0.697000      0.286000   \n",
-       "50%    1.610613e+09    103.000000      0.460000      0.765000      0.357000   \n",
-       "75%    1.610613e+09    112.000000      0.500000      0.833000      0.429000   \n",
-       "max    1.610613e+09    168.000000      0.684000      1.000000      1.000000   \n",
-       "\n",
-       "           AST_home      REB_home  TEAM_ID_away      PTS_away   FG_PCT_away  \\\n",
-       "count  26552.000000  26552.000000  2.665100e+04  26552.000000  26552.000000   \n",
-       "mean      22.823441     43.374284  1.610613e+09    100.639876      0.449732   \n",
-       "std        5.193308      6.625769  8.659299e+00     13.435868      0.055551   \n",
-       "min        6.000000     15.000000  1.610613e+09     33.000000      0.244000   \n",
-       "25%       19.000000     39.000000  1.610613e+09     91.000000      0.412000   \n",
-       "50%       23.000000     43.000000  1.610613e+09    100.000000      0.449000   \n",
-       "75%       26.000000     48.000000  1.610613e+09    110.000000      0.487000   \n",
-       "max       50.000000     72.000000  1.610613e+09    168.000000      0.687000   \n",
-       "\n",
-       "        FT_PCT_away  FG3_PCT_away      AST_away      REB_away  HOME_TEAM_WINS  \n",
-       "count  26552.000000  26552.000000  26552.000000  26552.000000    26651.000000  \n",
-       "mean       0.758816      0.349489     21.496271     42.113249        0.587032  \n",
-       "std        0.103429      0.109441      5.160596      6.533039        0.492376  \n",
-       "min        0.143000      0.000000      4.000000     19.000000        0.000000  \n",
-       "25%        0.692000      0.278000     18.000000     38.000000        0.000000  \n",
-       "50%        0.765000      0.350000     21.000000     42.000000        1.000000  \n",
-       "75%        0.833000      0.419000     25.000000     46.000000        1.000000  \n",
-       "max        1.000000      1.000000     46.000000     81.000000        1.000000  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(\"\\nBASIC STATISTICS:\")\n",
     "print(\"=\"*60)\n",
-    "games.describe()"
+    "stat_cols = ['FG_PCT_home', 'FG_PCT_away', 'PTS_home', 'PTS_away', \n",
+    "             'REB_home', 'REB_away', 'AST_home', 'AST_away']\n",
+    "\n",
+    "print(games[stat_cols].describe())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "54c19bf5",
    "metadata": {},
    "outputs": [
@@ -694,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "619f53c8",
    "metadata": {},
    "outputs": [
